CAMEL-7724: Fixed CS